# ggrwinti

./: .dockignore  AUTHORS  ChangeLog  Dockerfile  INSTALL  NEWS  README  README.md  autogen.sh  ax_check_qt.m4  ax_cxx_compile_stdcxx_11.m4  ax_init_standard_project.m4  bootstrap.sh  build-in-docker.conf  build-in-docker.sh  build-resource-file.sh  configure.ac  dependency-graph.sh  docker-compose.yaml  ggrwinti.desktop.in  mac-create-app-bundle.sh  makefile.am  makefile_test.inc.am  resolve-debbuilddeps.sh  resolve-rpmbuilddeps.sh  rpmsign.exp  sql-to-dot.sed  template.sh
appinfo/: app.php  info.xml
dbupdate/: Dockerfile  dbupdate.js  dbupdate.sh  geschaefteupdate.js  sitzungenupdate.js  traktandenupdate.js
debian/: changelog.in  control.in  rules
doc/: doxyfile.in  footer.html.in  header.html.in  makefile.am  style.css
docker/: Dockerfile  Dockerfile.dist  cronjob.sh  example.yaml  ggrwinti.json  makefile.am  start-ggrwinti.sh  test.yaml
html/: .travis.yml  AUTHORS.md  CHANGELOG.md  README.md  makefile.am
html/appinfo/: app.php  autoload.php  database.xml  info.xml  info.xml.in  routes.php
html/controller/: pagecontroller.php
html/css/: style.css
html/db/: geschaaefte.php  geschaaeftemapper.php  geschaefte.php  geschaeftemapper.php
html/js/: script.js
html/templates/: ggrsitzungen.php  index.php  main.php  part.content.php
html/tests/: bootstrap.php
js/: script.js
lib/Db/: Geschaeft.php  (+1 more)
scripts/: html2sql.sed  makefile.am  sitzungen.awk  testenv.sh  update-db.sh
templates/: fraktionssitzung.php  ggrsitzungen.php
tests/: bootstrap.php
(+25 files in other folders)
